@@ -1,3 +1,11 @@
+2002-03-29  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/trace.test (trace-18.2):
+	* generic/tclCmdMZ.c (Tcl_TraceObjCmd, TraceVarProc): corrected
+	potential double-free of traces on variables by flagging in
+	TraceVarProc that it will free the var in case the eval wants to
+	delete the var trace as well. [Bug #536937]
+
 2002-03-28  Miguel Sofer  <msofer@users.sourceforge.net>
 
 	* generic/tclParse.c (Tcl_EvalEx): passing the correct commandSize
